welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:8: error: type mismatch;
 found   : Double(2.0)
 required: Int
  if ((isBirthday) && (speed >= 86)) {return 2.0}
                                             ^caughtSpeeding:8: error: type mismatch;
 found   : Unit
 required: Int
  if ((isBirthday) && (speed >= 86)) {return 2.0}
  ^